--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(StrawberryRemote VERSION 0.1 LANGUAGES CXX)
+project(StrawberryRemote LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -9,18 +9,10 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Core Network Protobuf)
+find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets Core Network Protobuf)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Core Network Protobuf)
 
-qt_add_protobuf(RemoteMessages
-    GENERATE_PACKAGE_SUBFOLDERS
-    PROTO_FILES
-        proto/RemoteMessages.proto)
-
-target_sources(RemoteMessages
-  PRIVATE
-
-)
+add_subdirectory(proto)
 
 add_executable(StrawberryRemote
         main.cpp
@@ -41,16 +33,19 @@ add_executable(StrawberryRemote
         player.h
         player.cpp
         player.ui
+        messagewindow.h messagewindow.cpp messagewindow.ui
 )
 
-target_include_directories(RemoteMessages PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
+target_include_directories(StrawberryRemote PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 
 target_link_libraries(StrawberryRemote
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Network
     Qt${QT_VERSION_MAJOR}::Protobuf
-    RemoteMessages)
+    ${Protobuf_LIBRARIES}
+    Proto
+)
 
 
 include(GNUInstallDirs)
